src/assets/scss/custom.scss
/* ... */
.logo-option-area {
    .custom-control {
        .custom-control-label {
            color: #03142E;
            font-size: 14px;
            font-weight: 600;

            &:after,
            &:before {
                top: 50%;
                transform: translateY(-50%);
                width: 1.4rem;
                height: 1.3rem;
                left: -1.8rem;
            }
        }

        .custom-control-input {
            &:checked {
                ~.custom-control-label {
                    &:before {
                        background: #219F84;
                    }
                }
            }
        }
    }
}

.tabs-logo-container {
    .logo-placement-holder {
        padding-bottom: 0px;
        position: relative;
    }

    .upload-logo-opener {
        .logo-option-area {
            display: none;
            position: absolute;
            left: 0;
            right: 0;
            margin: 0 !important;
            //text-align: center;
            max-width: 100%;
        }
    }

    .logo-placement-holder {
        .upload-logo-opener {
            .logo-option-area {
                display: block;
            }
        }
    }

    .logo-placement-area {
        @media (min-width: 786px) {
            padding-bottom: 35px;
        }

        &.extracted-color-area {
            .logo-placement-holder {
                padding-bottom: 0;
            }
        }
    }
}

.products-block {
    position: relative;

    //block child drag
    &:after{
        content: "";
        display: block;
        height: 100%;
        width: 100%;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        position: absolute;
        z-index: 1000;
        background: rgba(0,0,0,0);
    }

    .image-holder {
        & > div {
            width: 100%;

            img.placeholder {
                min-height: 200px;
                width: 100% !important;
                animation-duration: 1.8s;
                animation-fill-mode: forwards;
                animation-iteration-count: infinite;
                animation-name: placeHolderShimmer;
                animation-timing-function: linear;
                background: #f6f7f8;
                background: linear-gradient(to bottom right, #fefefe 8%, #f5f5f5 38%, #fefefe 54%);
                background-size: 1000px 640px;
                border: none;
            }
        }
    }
}

.products-holder .products-block .image-holder {
    .custom-checkbox {
        position: absolute;
        left: 5px;
        top: 5px;

        .custom-control-label {
            &:before {
                width: 1.2rem;
                height: 1.2rem;
            }

            &:after {
                width: 1.2rem;
                height: 1.2rem;
            }
        }

        .custom-control-input:checked~.custom-control-label:before {
            background-color: #219F84;
            border-color: #219F84;
        }
    }
}

.collection-btn {
    .btn-secondary {
        background-color: #545b62;
        border-color: #545b62;
        font-size: 0.8rem;

        &.active {
            background-color: #219F84 !important;
            border-color: #219F84 !important;
        }
    }
}

.collection-modal {
    .modal-header {
        width: 100%;

        .modal-title {
            width: 100%;
        }
    }

    .card {
        height: 100%;
        cursor: move;
    }
}

$increase : 0;

@for $i from 1 through 10 {
    $increase : $increase + 0.5;

    .gap-#{$i} {
        gap: #{$increase}rem
    }

    .gap-x-#{$i} {
        column-gap: #{$increase}rem
    }

    .gap-y-#{$i} {
        row-gap: #{$increase}rem
    }
}

$fontSize: 0.5;

@for $i from 1 through 10 {
    $fontSize : $fontSize + 0.2;

    .fs-#{$i} {
        font-size: #{$fontSize}rem !important;
    }
}

.btn-secondary {
    &:hover {
        background: transparentize(#219F84, 0.2);
        border-color: transparentize(#219F84, 0.2);
        color: #fff;
    }

    &.light.btn {
        background: #E7F4F1;
        color: #219F84;
        border-color: #E7F4F1;

        &:hover,
        &:focus,
        &:active {
            border-color: #219F84;
            color: #219F84;
            background: #E7F4F1;
        }
    }
}

.btn.remove {
    width: 32px;
    height: 32px;
    font-size: 12px;
    flex-shrink: 0;
    color: #F8E1E2;
    background: #D53943;
    border: 1px solid #D53943;
    border-radius: 50%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;

    &:hover {
        border-color: #D53943;
    }

    &.absolute {
        position: absolute;
        right: -10px;
        top: -14px;
    }

    &.small{
        height: 16px;
        width: 16px;
        right: -8px;
        top: -10px;
    }
}

.sortable-ghost,
.sortable-chosen {
    .card {
        animation: 0.5s animateBorder linear alternate infinite;
    }
}

.break-after {
    page-break-after: always !important;
}

.break-before {
    page-break-before: always !important;
}

.avoid-inside-break {
    page-break-inside: avoid !important;
}

.checkbox_buttons {
    .btn.btn-secondary {
        background: #fff;
        color: #999;
        border-color: #999;

        &:not(.active):hover {
            color: $theme-color;
            border-color: $theme-color;
        }

        .checked {
            display: inline-block;
            vertical-align: middle;
            max-width: 0;
            overflow: hidden;
            transition: 0.2s all ease;
        }

        &.active {
            .checked {
                max-width: 20px;
            }

            &.focus {
                box-shadow: 0 0 0 3px transparentize($theme-color, 0.6);
            }
        }
    }
}
/* ... */

